# ecmwf_datadownloaded

./: README.md  main.py  pyproject.toml
example/: README.md  aifs_single_tutorial.py  cli_examples.sh
example/tutorial_downloads/aifs_single/20250621/: 20250621000000-0h-oper-fc.index
