[project]
name = "ecmwf-datadownloaded"
version = "0.1.0"
description = "A powerful CLI tool for downloading ECMWF meteorological forecast data with concurrent downloads and progress tracking"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ecmwf", "meteorology", "weather", "forecast", "data", "download", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.8.0,<3.12.0",
    "httpx>=0.28.0",
    "netcdf4>=1.7.2 ; sys_platform == 'linux'",
    "pandas>=2.0.0",
    "pathlib>=1.0.1",
    "pydantic>=2.11.0",
    "pywin32>=310 ; sys_platform == 'win32'",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "rich>=13.0.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.scripts]
ecmwf-download = "main:main"
ecmwf-downloader = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/ecmwf-datadownloaded"
Repository = "https://github.com/yourusername/ecmwf-datadownloaded"
Issues = "https://github.com/yourusername/ecmwf-datadownloaded/issues"
Documentation = "https://github.com/yourusername/ecmwf-datadownloaded#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
